--- a/graf/graf.vcxproj
+++ b/graf/graf.vcxproj
@@ -151,10 +151,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GeneticAlgorithm.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="graf.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GeneticAlgorithm.h" />
     <ClInclude Include="graf.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
